[package]
name = "rocket-prometheus-monitoring-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
sys-info = "0.9"
num_cpus = "1.13"